# DeDoops

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  hashing.rs  main.rs  similarity.rs
