[package]
name = "dedcore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
glob = "0.3.0"
md5 = "0.7.0"
sha256 = "1.1.1"
sqlite = "0.30.3"
thiserror = "2.0.12"
tokio = { version = "1.23.0", features = ["full"] }
rayon = "1.5"
sha2 = "0.10"
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tempfile = "3.8"
walkdir = "2.5"
indicatif = "0.17"
regex = "1.10"